<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="5dp"
    android:background="@color/light_gray"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/Lin_top"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/ib_delete"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/btn_delete" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Lin_top"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:layout_gravity="center_vertical"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_vertical"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/charge_record"
                    android:textSize="@dimen/font_size_18" />

                <TextView
                    android:id="@+id/tv_charge"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/charge_money_record"
                    android:textSize="@dimen/font_size_18" />
            </LinearLayout>

            <ImageButton
                android:id="@+id/ib_refund"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_refund" 
                android:layout_alignParentRight="true" 
                android:layout_alignParentEnd="true"
                />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:src="@drawable/tianyi_m" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tv_PublishCardNO"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/PulbishCardNO_record"
                    android:textSize="@dimen/font_size_15" />

                <TextView
                    android:id="@+id/tv_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/status_record"
                    android:textSize="@dimen/font_size_15" />

                <TextView
                    android:id="@+id/tv_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time_record"
                    android:textSize="@dimen/font_size_15" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>